@@ -114,9 +114,11 @@ bottom and shows important messages. The bottom two lines show the most \
 commonly used shortcuts in the editor.\n\
 \n\
  The notation for shortcuts is as follows: Control-key sequences are notated \
-with a caret (^) symbol.  Alt-key sequences are notated with an at (@) \
-symbol.  The following keystrokes are available in the main editor window. \
-Optional keys are shown in parentheses:\n\
+with a caret (^) symbol and are entered with the Control (Ctrl) hey.  \
+Escape-key sequences are notated with the Meta (M) symbol and can be entered \
+using either Esc, Alt or Meta depending on your keyboard setup. The \
+following keystrokes are available in the main editor window. Optional keys \
+are shown in parentheses:\n\
 \n", 94},
   {"free_node(): free'd a node, YAY!\n", 95},
   {"free_node(): free'd last node.\n", 96},
