@@ -3,7 +3,15 @@ CVS Code
 	- New shortcuts to toggle certain options that are normally only
 	  flags via Alt/Meta.  See Alt-C,E,I,K,M,P,X,Z.  New struct called
 	  toggles in nano.h, toggle_init(), toggle_init_one() in global.c
-	  called from shortcut_init(), and do_toggle in nano.c.
+	  called from shortcut_init(), and do_toggle in nano.c.  Also 
+	  moved the signal code into a separate function in nano.c called
+	  signal_init().
+	- Changed from Alt-key symbol (@) which is completely nonstandard
+	  to the *nix "Meta" symbol (M-).  Changed help_init to show
+	  the M-key usage and the help text to explain keys whcih generate
+	  Meta.  Moved the toggle Meta keystrokes to the first column
+	  instead of the third as they are the primary keystrokes for the
+	  functions.
 	- Changed last_search and last_replace vars to statically 
 	  allocated (hence nulled) and moved to search.c (Matt Kraai).
 - nano.c:
